@@ -32,8 +32,6 @@ jobs:
           - "5.16"
           - "5.14"
           - "5.12"
-          - "5.10"
-          - "5.8"
 
     env:
       CIP_TAG: ${{ matrix.cip_tag }}
