@@ -2,6 +2,7 @@ package Test2::Require::Internet;
 
 use strict;
 use warnings;
+use 5.012;
 use IO::Socket::INET;
 use parent qw( Test2::Require );
 
